--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
         </div>
     </nav>
 
+    <hr></hr>
 
+    <div class="container">
+        <div class="row">
+            <header>
+                <h2>About Me</h2>
+            </header>
+        </div>
+        <div class="row">
+            <img class="selfie" src="assets/IMG_4730.jpeg" alt="Picture of myself">
+        </div>
+    </div>
 
 
 
