--- a/index.html
+++ b/index.html
@@ -13,49 +13,79 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand font-weight-bold" href="#">Matthew Hyun</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <hr></hr>
 
     <div class="container">
         <div class="row">
-            <header>
-                <h2>About Me</h2>
-            </header>
-        </div>
-        <div class="row">
-            <img class="selfie" src="assets/IMG_4730.jpeg" alt="Picture of myself">
+            <div class="col">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand font-weight-bold" href="index.html">Matthew Hyun</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="portfolio.html">Portfolio <span
+                                        class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
 
+    <hr>
+    </hr>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <header>
+                    <h2>
+                        About Me
+                    </h2>
+                </header>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-8 col-md-6 col-lg-4">
+                <img class="img-fluid float-left mr-2 mb-1" src="assets/IMG_4730.jpeg" alt="Picture of Myself"
+                    width="50%" />
+                <p> Hi my name is Matthew Hyun. I am a 21 year old Full Stack Flex Full-Time student from San Diego,
+                    California. The past 4 years I attended California PolyTechnic State University, San Luis Obispo
+                    studying Environmental Earth and Soil Sciences; however, towards the end of my degree I realized
+                    that it would still take me a few extra years to graduate for something that I didn't enjoy.
+                    With this in mind, I decided to take the step and pursue the UCSD coding bootcamp in order to
+                    get ahead in a field that I am passioniate about and have an interest for.
+                </p>
+                <p>
+                    Some of my other hobbies and interests include playing tennis, going to concerts, finding new places
+                    to eat, and playing games. I am also into sneakers and streetwear culture and consider these things
+                    a big part of who I am. With my other hobbies and interests aside, I hope that by the end of this program
+                    I will be a knowledgeable Full Stack Developer.
+                </p>
+            </div>
+        </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+
+
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
 </body>
 
 
