realigned NAVBAR, menu links now situated on right side

--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
         <div class="row">
             <div class="col">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand font-weight-bold" href="index.html">Matthew Hyun</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                        aria-label="Toggle navigation">
+                    <a class="navbar-brand" href="index.html">Matthew Hyun</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="portfolio.html">Portfolio <span
-                                        class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="portfolio.html">Portfolio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact</a>
@@ -37,9 +38,10 @@
                     </div>
                 </nav>
             </div>
+            </nav>
         </div>
     </div>
-
+    
     <hr>
     </hr>
 
@@ -68,8 +70,8 @@
                 <p>
                     Some of my other hobbies and interests include playing tennis, going to concerts, finding new places
                     to eat, and playing games. I am also into sneakers and streetwear culture and consider these things
-                    a big part of who I am. With my other hobbies and interests aside, I hope that by the end of this program
-                    I will be a knowledgeable Full Stack Developer.
+                    a big part of who I am. With my other hobbies and interests aside, I hope that by the end of this
+                    program I will be a knowledgeable Full Stack Developer.
                 </p>
             </div>
         </div>
