--- a/contact.html
+++ b/contact.html
@@ -17,21 +17,21 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="index.html">Matthew Hyun</a>
+                <nav class="navbar navbar-expand-lg navbar-light bg-info">
+                    <a class="navbar-brand bg-info font-weight-bold text-white" href="index.html">Matthew Hyun</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="portfolio.html">Portfolio</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                         </ul>
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-
+   
 
 
 
