--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <title>Portfolio</title>
+
 </head>
 
 <body>
@@ -18,18 +17,18 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="index.html">Matthew Hyun</a>
+                <nav class="navbar navbar-expand-lg navbar-light bg-info">
+                    <a class="navbar-brand bg-info font-weight-bold text-white" href="index.html">Matthew Hyun</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
-                            </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item active">
                                 <a class="nav-link" href="portfolio.html">Portfolio</a>
                             </li>
                             <li class="nav-item">
