fixed spacing on about page began portfolio structure

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <hr>
     </hr>
 
-    <div class="container">
+    <div class="container border mt-5">
         <div class="row">
-            <div class="col">
+            <div class="col mt-4 mb-4">
                 <header>
                     <h2>
                         About Me
@@ -57,7 +57,7 @@
 
         <div class="row">
             <div class="col-sm-8 col-md-6 col-lg-4">
-                <img class="img-fluid float-left mr-2 mb-1" src="assets/IMG_4730.jpeg" alt="Picture of Myself"
+                <img class="img-fluid float-left mr-4 mb-2" src="assets/images/IMG_4730.jpeg" alt="Picture of Myself"
                     width="50%" />
                 <p> Hi my name is Matthew Hyun. I am a 21 year old Full Stack Flex Full-Time student from San Diego,
                     California. The past 4 years I attended California PolyTechnic State University, San Luis Obispo
