--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,8 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="index.html">About Me <span
+                                        class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -61,24 +62,25 @@
                         <input type="name" class="form-control" placeholder="Full Name">
                     </div>
                     <div class="form-group">
-                      <label for="exampleInputEmail1">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                            placeholder="Enter email">
                     </div>
                     <div class="form-group">
-                      <label for="messageBox">Message</label>
-                      <input type="message" class="form-control" placeholder="Enter Message">
+                        <label for="messageBox">Message</label>
+                        <input type="message" class="form-control" placeholder="Enter Message">
                     </div>
                     <div class="form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
-                  </form>
+                </form>
             </div>
         </div>
 
     </div>
-   
+
 
 
 
