--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="index.html">About Me <span
+                                        class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="portfolio.html">Portfolio</a>
