final commits: added gutters/column sizing/html semantics

--- a/index.html
+++ b/index.html
@@ -13,81 +13,83 @@
 
 <body>
 
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <nav class="navbar navbar-expand-lg navbar-light bg-info">
-                    <a class="navbar-brand bg-info font-weight-bold text-white" href="index.html">Matthew Hyun</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="index.html">About Me <span
-                                        class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="portfolio.html">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+                        <a class="navbar-brand bg-info font-weight-bold text-white" href="index.html">Matthew Hyun</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="index.html">About Me <span
+                                            class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
                 </nav>
             </div>
-            </nav>
         </div>
-    </div>
+    </section>
 
-    <hr>
-    </hr>
-
-    <div class="container border mt-5">
-        <div class="row">
-            <div class="col mt-4 mb-4">
-                <header>
-                    <h2>
-                        About Me
-                    </h2>
-                </header>
+    <section>
+        <div class="container border mt-5">
+            <div class="row">
+                <div class="col-sm-10 col-md-8 col-lg-8 mt-2 mb-4">
+                    <header>
+                        <h2>
+                            About Me
+                        </h2>
+                    </header>
+                    <hr>
+                    </hr>
+                    <img class="img-fluid float-left mr-4 mb-2" src="assets/images/IMG_4730.jpeg"
+                        alt="Picture of Myself" width="50%" />
+                    <p> Hi my name is Matthew Hyun. I am a 21 year old Full Stack Flex Full-Time student from San Diego,
+                        California. The past 4 years I attended California PolyTechnic State University, San Luis Obispo
+                        studying Environmental Earth and Soil Sciences; however, towards the end of my degree I realized
+                        that it would still take me a few extra years to graduate for something that I didn't enjoy.
+                        With this in mind, I decided to take the step and pursue the UCSD coding bootcamp in order to
+                        get ahead in a field that I am passioniate about and have an interest for.
+                    </p>
+                    <p>
+                        Some of my other hobbies and interests include playing tennis, going to concerts, finding new
+                        places
+                        to eat, and playing games. I am also into sneakers and streetwear culture and consider these
+                        things
+                        a big part of who I am. With my other hobbies and interests aside, I hope that by the end of
+                        this
+                        program I will be a knowledgeable Full Stack Developer.
+                    </p>
+                    <div class="col-sm-2 col-md-4 col-lg-4"></div>
+                </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-sm-8 col-md-6 col-lg-4">
-                <img class="img-fluid float-left mr-4 mb-2" src="assets/images/IMG_4730.jpeg" alt="Picture of Myself"
-                    width="50%" />
-                <p> Hi my name is Matthew Hyun. I am a 21 year old Full Stack Flex Full-Time student from San Diego,
-                    California. The past 4 years I attended California PolyTechnic State University, San Luis Obispo
-                    studying Environmental Earth and Soil Sciences; however, towards the end of my degree I realized
-                    that it would still take me a few extra years to graduate for something that I didn't enjoy.
-                    With this in mind, I decided to take the step and pursue the UCSD coding bootcamp in order to
-                    get ahead in a field that I am passioniate about and have an interest for.
-                </p>
-                <p>
-                    Some of my other hobbies and interests include playing tennis, going to concerts, finding new places
-                    to eat, and playing games. I am also into sneakers and streetwear culture and consider these things
-                    a big part of who I am. With my other hobbies and interests aside, I hope that by the end of this
-                    program I will be a knowledgeable Full Stack Developer.
-                </p>
-            </div>
-        </div>
+    </section>
 
 
 
-
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 
 
