--- a/contact.html
+++ b/contact.html
@@ -45,40 +45,38 @@
 
     <div class="container border mt-5">
         <div class="row">
-            <div class="col mt-4 mb-4">
+            <div class="col-sm-10 col-md-8 col-lg-8 mt-4 mb-4">
                 <header>
                     <h2>
                         Contact
                     </h2>
                 </header>
+                <hr>
+                </hr>
+                <div class="row">
+                    <div class="col">
+                        <form>
+                            <div class="form-group">
+                                <label for="contactName">Name</label>
+                                <input type="name" class="form-control" placeholder="Full Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp" placeholder="Enter email">
+                            </div>
+                            <div class="form-group">
+                                <label for="messageBox">Message</label>
+                                <input type="message" class="form-control" placeholder="Enter Message">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-        </div>
-
-        <div class="row">
             <div class="col">
-                <form>
-                    <div class="form-group">
-                        <label for="contactName">Name</label>
-                        <input type="name" class="form-control" placeholder="Full Name">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                            placeholder="Enter email">
-                    </div>
-                    <div class="form-group">
-                        <label for="messageBox">Message</label>
-                        <input type="message" class="form-control" placeholder="Enter Message">
-                    </div>
-                    <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
             </div>
         </div>
-
     </div>
 
 
