updated portfolio with projects/assignments, contact info

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+  
 <!doctype html>
 <html lang="en">
 
@@ -74,7 +75,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col mt-4">
+                <h2>Contact Information</h2>
+                <div class="mt-3 mb-3">Email: Mattyihyun@gmail.com</div>
+                <div class="mt-3 mb-3">Phone Number: 619-623-5473</div>
+                <div class="mt-3 mb-3"><a href="https://github.com/Myhyun">Click to be taken to my GitHub</a></div>
+                <div class="mt-3 mb-3"><a href="https://www.linkedin.com/in/matthew-hyun/">My LinkedIn Profile</a></div>
+                <div class="mt-3 mb-3"><a href="assets/Matthew Hyun Resume.pdf">Click to view my Resume!</a></div>
             </div>
         </div>
     </div>
