Added project 2 into portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
+                        <div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarNav">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">About Me <span
@@ -86,8 +86,9 @@
 
                     <div class="row">
                         <div class="col-sm-12 col-md-12 col-lg-6">
-                            <a href="https://placeholder.com"><img class="mt-4 mb-2 ml-5 pl-3"
-                                    src="https://via.placeholder.com/350x350" alt="Placeholder" width="50%"></a>
+                            <a href="https://github.com/Q118/jmsj"><img class="mt-4 mb-2 ml-5 pl-3"
+                                    src="assets/images/Screen Shot 2020-07-29 at 7.27.41 PM.png" alt="Project 2 Image" width="50%"></a>
+                                    <p class="text-center">The Binge Guide Project</p>
                         </div>
                     </div>
                 </div>
