created hyperlinks to repo and deployed project

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,6 +89,8 @@
                             <a href="https://github.com/Q118/jmsj"><img class="mt-4 mb-2 ml-5 pl-3"
                                     src="assets/images/Screen Shot 2020-07-29 at 7.27.41 PM.png" alt="Project 2 Image" width="50%"></a>
                                     <p class="text-center">The Binge Guide Project</p>
+                                    <a href="https://github.com/Q118/jms"><p class="text-center">https://github.com/Q118/jmsj</p></a>
+                                    <a href="jmsj2.herokuapp.com"><p class="text-center">jmsj2.herokuapp.com</p></a>
                         </div>
                     </div>
                 </div>
